# meeting-transcriber

./: .gitignore  README.md  aws_transcribe.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  test.yml
src/meeting_transcriber/: __init__.py  aws_transcribe.py  cli.py  mcp.py
src/meeting_transcriber/transcription/: __init__.py  audio_extraction.py  aws_transcribe.py  markdown_converter.py
tests/: __init__.py  test_audio_extraction.py  test_aws_transcribe.py  test_cli.py  test_markdown_converter.py  test_mcp.py
