[project]
name = "meeting-transcriber"
version = "0.1.0"
description = "Professional audio/video transcription toolkit with local Faster-Whisper and AWS Transcribe integration"
readme = "README.md"
authors = [
    { name = "Tomasz Trębski", email = "ttrebski@trek10.com" }
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "faster-whisper>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pathlib",
    "boto3>=1.26.0",
    "ffmpeg-python>=0.2.0",
    "ruff>=0.1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_transcriber"]

[project.scripts]
aws-transcribe = "meeting_transcriber.aws_transcribe:main"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
